<resources>
    <string name="app_name">MyStory</string>
    <string name="date">Tanggal dibuat</string>
    <string name="tambah_cerita">Buat</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="image">Gambar</string>
    <string name="camera_capture_error">Gagal mengambil gambar</string>
    <string name="story">Buat cerita</string>
    <string name="error_post_story">Terjadi kesalahan, silakan coba lagi</string>
    <string name="error_email">Silakan masukkan alamat email yang valid</string>
    <string name="guest">Unggah sebagai Pengunjung</string>
    <string name="cta_story">Mulai ceritamu sekarang!</string>
    <string name="camera_switch">camera switch</string>
    <string name="error_password">Kata sandi harus minimal 8 karakter</string>
    <string name="register">Daftar Akun</string>
    <string name="login_subtitle">Masuk ke akun Anda</string>
    <string name="no_account">Belum memiliki akun?</string>
    <string name="logout">Keluar</string>
    <string name="language">Ubah Bahasa ke English(US)</string>
    <string name="or">atau</string>
    <string name="cta_story_title">Ingin membuat cerita sendiri?</string>
    <string name="permission_granted">Izin diberikan</string>
    <string name="error_login">Email atau kata sandi salah</string>
    <string name="splash">splash</string>
    <string name="name">Nama</string>
    <string name="login_title">Masukkan alamat email dan kata sandi Anda</string>
    <string name="login">Login</string>
    <string name="setting">Pengaturan</string>
    <string name="gallery">Galeri</string>
    <string name="button_guest">Button Guest</string>
    <string name="register_here">Daftar Disini</string>
    <string name="error_open_camera">Terjadi kesalahan saat membuka kamera</string>
    <string name="desc_story">ISI DESKRIPSI</string>
    <string name="register_subtitle">Buat akun Anda</string>
    <string name="permission_denied">Izin ditolak</string>
    <string name="img1">img1</string>
    <string name="login_here">Masuk disini</string>
    <string name="submit">Kirim</string>
    <string name="camera_capture">camera capture</string>
    <string name="error_register">Email sudah terdaftar</string>
    <string name="error_get_story">Terjadi kesalahan saat mengambil data, silakan coba lagi</string>
    <string name="register_title">Isi data Anda untuk mendaftar</string>
    <string name="nama_user">Nama User</string>
    <string name="img2">img2</string>
    <string name="text_pass">Masukkan Password</string>
    <string name="text_email">Masukkan Email</string>
    <string name="camerax">Kamera</string>
    <string name="text_username">Masukkan username</string>
    <string name="register_success">Pendaftaran berhasil, silakan masuk dengan akun Anda</string>
    <string name="deskripsi">MyStory adalah platform berbagi yang disediakan oleh Dicoding</string>
    <string name="profile">Profile</string>
    <string name="image_detail">image detail</string>
    <string name="password">Kata Sandi</string>
    <string name="username">Username</string>
    <string name="logo_dicoding">Logo Dicoding</string>
    <string name="email">E-mail</string>
    <string name="maps">map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="logo_add_map">logo add map</string>
    <string name="confirm">Pilih Lokasi</string>
    <string name="choose_location">Tentukan Lokasi Anda</string>
    <string name="confirm_location">-</string>

    <string name="marker" translatable="false">Marker: %1$.6f, %2$.6f</string>
    <string name="lat_long" translatable="false">Lat: %1$.6f, Long: %2$.6f</string>
    <string name="position">Your Position: %1$.6f, %2$.6f</string>
    <string name="open_map">Buka peta dari sini</string>
    <string name="no_location">Tidak ada lokasi yang ditetapkan untuk cerita ini</string>
    <string name="posted_location">Lokasi cerita yang dikirimkan</string>
    <string name="current_location">Lokasi Anda Saat Ini</string>
    <string name="map_error">Tidak dapat menampilkan hasil, silakan coba lagi</string>
    <string name="error_map_access">Tidak dapat mengakses lokasi, silakan coba lagi</string>
    <string name="story_location">Lokasi cerita</string>
    <string name="retry">Coba Lagi</string>

    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="post_map">Tambahkan Lokasi</string>
    <string name="your_location">Your Location</string>
</resources>
