<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.register.RegisterActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="184dp"
        android:layout_height="78dp"
        android:contentDescription="@string/logo_dicoding"
        android:src="@drawable/dicoding"
        android:transitionName="logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/register_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <TextView
        android:id="@+id/tvdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textSize="16sp"
        android:transitionName="description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle" />

    <TextView
        android:id="@+id/tv_reg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdesc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg_name">

        <EditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/text_username"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:transitionName="email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_reg_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:transitionName="email2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg_email">

        <com.nanda.mystory.view.customview.EmailCustom
            android:id="@+id/ed_register_email"
            android:hint="@string/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:transitionName="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_reg_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:transitionName="password"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg_password">

        <com.nanda.mystory.view.customview.PasswordCustom
            android:id="@+id/ed_register_password"
            android:hint="@string/text_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/error_register"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_reg_password" />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/register"
        android:transitionName="register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_reg_password" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="@+id/btn_login_here"
        app:layout_constraintStart_toStartOf="@+id/btn_login_here"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_here" />

    <com.nanda.mystory.view.customview.ButtonCustom
        android:id="@+id/btn_guest"
        android:layout_width="237dp"
        android:layout_height="50dp"
        android:text="@string/guest"
        android:textAllCaps="false"
        android:transitionName="guest"
        app:layout_constraintEnd_toEndOf="@+id/btn_login_here"
        app:layout_constraintStart_toStartOf="@+id/btn_login_here"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

    <TextView
        android:id="@+id/tv_login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:textSize="14sp"
        android:transitionName="account"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_here"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/btn_login_here"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/light_blue_600"
        android:text="@string/login_here"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:transitionName="account2"
        app:layout_constraintEnd_toEndOf="@+id/tv_login_here"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="@+id/tv_login_here"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
