<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".view.main.MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="173dp"
        android:layout_height="56dp"
        android:contentDescription="@string/logo_dicoding"
        android:src="@drawable/dicoding"
        android:transitionName="logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <ImageView
        android:id="@+id/img_slide_1"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/img1"
        android:src="@drawable/image_kurikulum_global"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/deskripsi"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/slide_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/img_slide_2"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/img2"
        android:src="@drawable/image_belajar_fleksibel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/slide_2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        app:altSrc="@drawable/baseline_circle_24_blue_load"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/outline_circle_24"
        tools:alpha="1" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/slide_1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        app:altSrc="@drawable/baseline_circle_24_blue_load"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toStartOf="@+id/slide_2"
        app:srcCompat="@drawable/outline_circle_24"
        tools:alpha="1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="530dp" />

    <com.nanda.mystory.view.customview.ButtonCustom
        android:id="@+id/btn_login"
        android:layout_width="168dp"
        android:layout_height="50dp"
        android:layout_marginTop="144dp"
        android:elevation="15dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btn_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo">

    </com.nanda.mystory.view.customview.ButtonCustom>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="168dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:alpha="0"
        android:backgroundTint="@color/light_blue_600"
        android:elevation="25dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/tv_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        tools:alpha="1" />


    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_guest"/>

    <com.nanda.mystory.view.customview.ButtonCustom
        android:id="@+id/btn_guest"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:alpha="0"
        android:drawableBottom="@drawable/baseline_person_24"
        app:layout_constraintBottom_toTopOf="@+id/tv_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.motion.widget.MotionLayout>

